pxc/tests/test_47_expand/up1.px
namespace up1;
import common -;
import meta::common m;

interface ifoo {
  function string hoge(string x);
  function string fuga(string x);
}

function {f} string call_func(string x)
{
  return f(x);
}

macro mf_str{t} m::metamap{m::member_functions{t}, meta::common::to_string};

struct {ityp} foo : ityp : {
  expand(fsym : mf_str{ityp}) {
    function string fsym(expand(arg : m::args{m::local{ityp, fsym}})) {
      string s = m::to_string{fsym};
      s.append(":");
      s.append(x);
      s.append(":");
      macro mf m::local{ityp, fsym};
      s.append(m::full_string{m::argtypes{mf}});
	// error: can not use xhoge as tmpl param
      function string xhoge(string x) {
	x.append(x);
	return x;
      }
      s.append(xhoge("abc"));
      return s;
    }
  }
}

function void test1() {
  println(m::full_string{m::member_functions{ifoo}});
  ptr{ifoo} p = ptr{foo{ifoo}}(foo{ifoo}());
  println(p->hoge("A"));
  println(p->fuga("B"));
}

test1();
